--- a/conference/templates/index.html
+++ b/conference/templates/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div>
-        <h3>{{name}}, you are at Index page! </h3>
+        <p>{{name}}, you are at index page! </p>
+        <a href="{% url 'create_conference' %}"> Create conference </a>
     </div>
 </body>
 </html>
