Conference model updated

--- a/conference/templates/conference/conference_details.html
+++ b/conference/templates/conference/conference_details.html
@@ -17,10 +17,10 @@
         <p><b>Venue: </b>{{conference.venue}}</p>
         <p><b>Country: </b>{{conference.country}}</p>  
         <p><b>Submissions limit: </b>{{conference.est_submissions}}</p>
-        <p>{{conference.firstday}}</p>
-        <p>{{conference.lastday}}</p>
-        <p><b>Primary area: </b>{{conference.primaryarea}}</p>
-        <p><b>Secondary area: </b>{{conference.secondaryarea}}</p>
+        <p><b>First day: </b>{{conference.first_day}}</p>
+        <p><b>Last day: </b>{{conference.last_day}}</p>
+        <p><b>Primary area: </b>{{conference.primary_area}}</p>
+        <p><b>Secondary area: </b>{{conference.secondary_area}}</p>
         <p><b>Area notes: </b>{{conference.area_notes}}</p>
         <p><b>Organizer: </b>{{conference.organizer}}</p>
         <p><b>Organizer's website: </b>{{conference.organizer_webpage}}</p>
