--- a/conference/templates/index.html
+++ b/conference/templates/index.html
@@ -11,5 +11,9 @@
         <p>{{name}}, you are at index page! </p>
         <a href="{% url 'create_conference' %}"> Create conference </a>
     </div>
+
+    <div>
+        <a href="{% url 'view_conferences' %}"> See list of conferences </a>
+    </div>
 </body>
 </html>
