--- a/conference/templates/conference/create_conference.html
+++ b/conference/templates/conference/create_conference.html
@@ -9,7 +9,7 @@
 <body>
     <p>{{message}}</p>
     <fieldset>
-        <form action="/conference_list" name="conferenceForm" target="" method="POST">
+        <form action="{% url 'conference_list' %}" name="conferenceForm" target="" method="POST">
             {% csrf_token %}
             <div>       
                 <label for="type">Type *</label>      
@@ -31,7 +31,7 @@
                 <input type="text" name="venue"><br>
                 <label for="">City: *</label>
                 <input type="text" name="city" required><br>
-                <label for="">Country/region: *</label>
+                <label for="country">Country/region: *</label>
                     <select name="country" id="country" required>
                         <option value="Bangladesh">Bangladesh</option>
                         <option value="India">India</option>
@@ -46,31 +46,31 @@
                 <label for="">Last day: </label>
                 <input type="datetime-local" name="lastday" required><br>
                 <hr>
-                <label for="">Primary area: </label>
+                <label for="primary_area">Primary area: </label>
                 <select name="primary_area" id="primary_area" required>
-                    <option value="accounting_and_finance">Accounting and finance</option>
-                    <option value="art_and_literature">Art and literature</option>
-                    <option value="">Biological Sciences</option>
-                    <option value="">Business and Management</option>
-                    <option value="">Chemistry</option>
-                    <option value="">Civil Engineering</option>
-                    <option value="">Electrical Engineering</option>
-                    <option value="">Information and Technology</option>
-                    <option value="">Industrial Computing and Networking</option>
-                    <option value="">Computer Engineering</option>
+                    <option value="Accounting and Finance">Accounting and finance</option>
+                    <option value="Art and literature">Art and literature</option>
+                    <option value="Biological Sciences">Biological Sciences</option>
+                    <option value="Business and Management">Business and Management</option>
+                    <option value="Chemistry">Chemistry</option>
+                    <option value="Civil Engineering">Civil Engineering</option>
+                    <option value="Electrical Engineering">Electrical Engineering</option>
+                    <option value="Information and Technology">Information and Technology</option>
+                    <option value="Industrial Computing and Networking">Industrial Computing and Networking</option>
+                    <option value="Computer Engineering">Computer Engineering</option>
                 </select><br>
-                <label for="">Scenondary area: </label>
+                <label for="secondary_area">Scenondary area: </label>
                 <select name="secondary_area" id="primary_area">
-                    <option value="accounting_and_finance">Accounting and finance</option>
-                    <option value="art_and_literature">Art and literature</option>
-                    <option value="">Biological Sciences</option>
-                    <option value="">Business and Management</option>
-                    <option value="">Chemistry</option>
-                    <option value="">Civil Engineering</option>
-                    <option value="">Electrical Engineering</option>
-                    <option value="">Information and Technology</option>
-                    <option value="">Industrial Computing and Networking</option>
-                    <option value="">Computer Engineering</option>
+                    <option value="Accounting and Finance">Accounting and finance</option>
+                    <option value="Art and literature">Art and literature</option>
+                    <option value="Biological Sciences">Biological Sciences</option>
+                    <option value="Business and Management">Business and Management</option>
+                    <option value="Chemistry">Chemistry</option>
+                    <option value="Civil Engineering">Civil Engineering</option>
+                    <option value="Electrical Engineering">Electrical Engineering</option>
+                    <option value="Information and Technology">Information and Technology</option>
+                    <option value="Industrial Computing and Networking">Industrial Computing and Networking</option>
+                    <option value="Computer Engineering">Computer Engineering</option>
                 </select><br>
                 <label for="">Area notes: </label>
                 <input type="text" name="areanotes" required><br>
