--- a/conference/templates/conference/abstract_list.html
+++ b/conference/templates/conference/abstract_list.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +8,7 @@
     <title>Abstract list</title>
 </head>
 <body>
+    <a href="{% url 'index' %}">Back to homepage</a>
     <div>
         {{conference.id}} <br>
         {{conference.title}} <br>
