--- a/conference/templates/index.html
+++ b/conference/templates/index.html
@@ -7,13 +7,9 @@
     <title>Index</title>
 </head>
 <body>
+    {% include 'navbar.html' %}
     <div>
         <p>{{name}}, you are at index page! </p>
-        <a href="{% url 'create_conference' %}"> Create conference </a>
-    </div>
-
-    <div>
-        <a href="{% url 'view_conferences' %}"> See list of conferences </a>
     </div>
 </body>
 </html>
