login and registration form added

--- a/conference/templates/navbar.html
+++ b/conference/templates/navbar.html
@@ -11,12 +11,14 @@
 
     <div>
         <h3>EasyChair</h3>
-        <a href="{% url 'service' %}">Services</a>|
+        <a href="{% url 'service' %}">Services</a> |
         <a href="{% url 'about_us' %}">About Us</a> |
         <a href="{% url 'vcs' %}">Virtual conference System</a> |
         <a href="{% url 'conference' %}">Conference</a> |
         <a href="{% url 'author' %}">Author</a> |
-        <a href="{% url 'editor' %}">Editor</a>
+        <a href="{% url 'editor' %}">Editor</a> |
+        <a href="{% url 'reviewer' %}">Reviewer</a> |
+        <a href="{% url 'login' %}">Login</a> 
     </div>
 
     {% endblock %}
