--- a/conference/templates/reviewer/reviewer.html
+++ b/conference/templates/reviewer/reviewer.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Reviewer</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
-    <div>
-        <p>{{name}}, you are at index page!</p>
-    </div>
+    Reviewer
 </body>
 </html>
