--- a/conference/templates/login/login.html
+++ b/conference/templates/login/login.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 </head>
 <body>
-    Login
+    {% include 'navbar.html' %}
 
     <fieldset>
         <form action="{% url 'index' %}">
