--- a/conference/templates/navbar.html
+++ b/conference/templates/navbar.html
@@ -13,7 +13,7 @@
         <h3>EasyChair</h3>
         <a href="{% url 'service' %}">Services</a> |
         <a href="{% url 'about_us' %}">About Us</a> |
-        <a href="{% url 'vcs' %}">Virtual conference System</a> |
+        <a href="{% url 'vcs' %}">Virtual Conference System</a> |
         <a href="{% url 'conference' %}">Conference</a> |
         <a href="{% url 'author' %}">Author</a> |
         <a href="{% url 'editor' %}">Editor</a> |
