--- a/conference/templates/registration/user_registration.html
+++ b/conference/templates/registration/user_registration.html
@@ -7,7 +7,7 @@
     <title>Registration</title>
 </head>
 <body>
-    Registration
+    {% include 'navbar.html' %}
     <fieldset>
         <form action="{% url 'login' %}">
             <label for="">First name: </label>
