--- a/conference/templates/conference/abstract_list.html
+++ b/conference/templates/conference/abstract_list.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abstract list</title>
 </head>
+    {% include 'navbar.html' %}
 <body>
     <a href="{% url 'index' %}">Back to homepage</a>
     <div>
