user created through registration
user is created through registration but issues occurs when user is redirected to login page after reg

--- a/conference/templates/login/login.html
+++ b/conference/templates/login/login.html
@@ -11,6 +11,7 @@
 
     <fieldset>
         <form action="{% url 'index' %}">
+            {% csrf_token %}
             <label for="">Email: </label>
             <input type="text" name="email" id="email" required> <br>
             <label for="">Password: </label>
