--- a/conference/templates/registration/user_registration.html
+++ b/conference/templates/registration/user_registration.html
@@ -9,22 +9,9 @@
 <body>
     {% include 'navbar.html' %}
     <fieldset>
-        <form action="{% url 'login' %}">
-            <label for="">First name: </label>
-            <input type="text" name="fname" id="fname" required> <br>
-            <label for="">Last name: </label>
-            <input type="text" name="lname" id="lname" required> <br>
-            
-            <label for="">Email: </label>
-            <input type="email" name="email" id="email" required> <br>
-            <label for="">Retype email: </label>
-            <input type="email" name="remail" id="remail" required> <br>
-
-            <label for="">Password: </label>
-            <input type="password" name="password" id="password" required> <br>
-            <label for="">Retype password: </label>
-            <input type="password" name="rpassword" id="rpassword" required> <br>
-
+        <form action="" name="" method="POST">
+            {% csrf_token %}
+            {{form.as_p}}
             <input type="submit" value="Submit">
         </form>
     </fieldset>
