--- a/conference/templates/index.html
+++ b/conference/templates/index.html
@@ -9,7 +9,9 @@
 <body>
     {% include 'navbar.html' %}
     <div>
-        <p>{{name}}, you are at index page!</p>
+        {% for message in messages %}
+            {{message}}
+        {% endfor %}
     </div>
 </body>
 </html>
