--- a/conference/templates/navbar.html
+++ b/conference/templates/navbar.html
@@ -18,7 +18,8 @@
         <a href="{% url 'author' %}">Author</a> |
         <a href="{% url 'editor' %}">Editor</a> |
         <a href="{% url 'reviewer' %}">Reviewer</a> |
-        <a href="{% url 'login' %}">Login</a> 
+        <a href="{% url 'login' %}">Login</a> |
+        <a href="{% url 'logout' %}">Logout</a> 
     </div>
 
     {% endblock %}
