--- a/conference/templates/conference/create_conference.html
+++ b/conference/templates/conference/create_conference.html
@@ -7,6 +7,7 @@
     <title>Create conference</title>
 </head>
 <body>
+    {% include 'navbar.html' %}
     <p>{{message}}</p>
     <fieldset>
         <form action="{% url 'conference_list' %}" name="conferenceForm" target="" method="POST">
