--- a/conference/templates/profile/profile.html
+++ b/conference/templates/profile/profile.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Profile</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
-    
-    <div>
-        <p>Welcome, {{request.user}}. You are at Index page!</p>
-    </div>
+   {% include 'navbar.html' %}
 </body>
 </html>
