--- a/conference/templates/conference/view_conference_list.html
+++ b/conference/templates/conference/view_conference_list.html
@@ -7,17 +7,18 @@
     <title>Conferences</title>
 </head>
 <body>
+    {% extends 'navbar.html' %}
+    {% block content %}
+    <h4 class="mb-4"><u>All conferences:</u></h4>
     <fieldset>
-        <h3>Conferences:</h3>
         {% for conference in latest_conferences %}
-
         <ul>
             <li>
                 <a href="{% url 'conference_details' conference.id %}"><p>Title: {{conference.title}}</p></a>
             </li>
         </ul> 
-
         {% endfor %}
     </fieldset>
+    {% endblock %}
 </body>
 </html>
