--- a/conference/templates/profile/profile.html
+++ b/conference/templates/profile/profile.html
@@ -7,6 +7,9 @@
     <title>Profile</title>
 </head>
 <body>
-   {% include 'navbar.html' %}
+   {% extends 'navbar.html' %}
+   {% block content %}
+   <h2>Profile</h2>
+   {% endblock %}
 </body>
 </html>
