--- a/conference/templates/reviewer/reviewer.html
+++ b/conference/templates/reviewer/reviewer.html
@@ -7,7 +7,10 @@
     <title>Reviewer</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
-    Reviewer
+    {% extends 'navbar.html' %}
+    
+    {% block content %}
+        <h2>Reviewer</h2>
+    {% endblock %}
 </body>
 </html>
