--- a/conference/templates/vcs/vcs.html
+++ b/conference/templates/vcs/vcs.html
@@ -7,7 +7,9 @@
     <title>VCS</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
+    {% extends 'navbar.html' %}
+    {% block content %}
     <h2>VCS</h2>
+    {% endblock %}
 </body>
 </html>
