--- a/conference/templates/profile/profile.html
+++ b/conference/templates/profile/profile.html
@@ -10,6 +10,13 @@
    {% extends 'navbar.html' %}
    {% block content %}
    <h2>Profile</h2>
+   <hr>
+   <div class="container">
+    <p>Name: {{user.username}}</p>
+    <p>Email: {{user.email}}</p>
+    <p>Password: {{user.password}}</p>
+    <p>Role: {{group}}</p>
+   </div>
    {% endblock %}
 </body>
 </html>
