--- a/conference/templates/navbar.html
+++ b/conference/templates/navbar.html
@@ -14,15 +14,19 @@
     <div class="container">
         <h3>EasyChair</h3>
         <a href="{% url 'service' %}">Services</a> |
-        <a href="{% url 'about_us' %}">About Us</a> |
         <a href="{% url 'vcs' %}">Virtual Conference System</a> |
         <a href="{% url 'conference' %}">Conference</a> |
-        <a href="{% url 'author' %}">Author</a> |
+        <!-- <a href="{% url 'author' %}">Author</a> |
         <a href="{% url 'editor' %}">Editor</a> |
-        <a href="{% url 'reviewer' %}">Reviewer</a> |
-        <a href="{% url 'profile' %}">Profile</a> |
+        <a href="{% url 'reviewer' %}">Reviewer</a> | -->
+        <a href="{% url 'about_us' %}">About Us</a> |
+        <a href="{% url 'profile' %}">Profile</a> | 
+        {% if unauthenticated_user or user.is_anonymous %}
         <a href="{% url 'login' %}">Login</a> |
+        {% endif %}
+        {% if request.user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a> 
+        {% endif %}
     </div>
     <hr>
     <!-- Navbar end -->
